Virtual threads used when connections or requests per connection are unlimited.